--- a/src/template.html
+++ b/src/template.html
@@ -16,10 +16,10 @@
     <header>
         <nav>
             <ul class="header-buttons-container">
-                <li><button class="action-button" id="taskBtn" data-type="task">New Task</button></li>
-                <li><button class="action-button" id="missionBtn" data-type="mission">New Mission</button></li>
-                <li><button class="action-button" id="offenseBtn" data-type="offense">New Offense</button></li>
-                <li><button class="action-button" id="spendBtn" data-type="spend">Spend Points</button></li>
+                <li><button class="action-button" id="taskBtn" data-type="tasks">New Task</button></li>
+                <li><button class="action-button" id="missionBtn" data-type="missions">New Mission</button></li>
+                <li><button class="action-button" id="offenseBtn" data-type="offenses">New Offense</button></li>
+                <!-- <li><button class="action-button" id="spendBtn" data-type="spend">Spend Points</button></li> -->
             </ul>
         </nav>
     </header>
@@ -28,19 +28,19 @@
         <h1>Lifese</h1>
 
         <ul class="sidebar-buttons-container">
-            <li class="sidebar-button active" id="allQuestsBtn" data-type="quest">
+            <li class="sidebar-button active" id="allQuestsBtn" data-type="quests">
                 <i class="fa-solid fa-book"></i>
                 All Quests
             </li>
-            <li class="sidebar-button" id="tasksBtn" data-type="task">
+            <li class="sidebar-button" id="tasksBtn" data-type="tasks">
                 <i class="fa-solid fa-list-check"></i>
                 Tasks
             </li>
-            <li class="sidebar-button" id="missionsBtn" data-type="mission">
+            <li class="sidebar-button" id="missionsBtn" data-type="missions">
                 <i class="fa-solid fa-bullseye"></i>
                 Missions
             </li>
-            <li class="sidebar-button" id="offensesBtn" data-type="offense">
+            <li class="sidebar-button" id="offensesBtn" data-type="offenses">
                 <i class="fa-solid fa-triangle-exclamation"></i>
                 Offenses
             </li>
@@ -85,6 +85,6 @@
                 <button id="cancel">Cancel</button>
             </div>
         </form>
-    </div>
+    </dialog>
 </body>
 </html>
