--- a/src/template.html
+++ b/src/template.html
@@ -52,43 +52,6 @@
     </aside>
 
     <div id="content">
-        <div class="stats-embed">
-            <h1 id="statsTitle">Your Statistics</h1>
-            <div class="stats">
-                <div class="test">
-                    <h4>Points:</h4>
-                    <p>6</p>
-                </div>
-                <div class="test">
-                    <!-- <h4>Title</h4>
-                    <p>6</p> -->
-                </div>
-                <div class="test">
-                    <h4>Total Points Earned:</h4>
-                    <p>6</p>
-                </div>
-                <div class="test">
-                    <h4>Total Points Lost:</h4>
-                    <p>6</p>
-                </div>
-                <div class="test">
-                    <h4>Total Tasks Completed:</h4>
-                    <p>6</p>
-                </div>
-                <div class="test">
-                    <h4>Total Tasks Failed:</h4>
-                    <p>6</p>
-                </div>
-                <div class="test">
-                    <h4>Total Missions Completed:</h4>
-                    <p>6</p>
-                </div>
-                <div class="test">
-                    <h4>Total Offenses Commited:</h4>
-                    <p>6</p>
-                </div>
-            </div>
-        </div>
     </div>
 
     <dialog>
@@ -125,7 +88,7 @@
 
     <div class="feedback-container">
         <div class="feedback">
-            if you see this notify me please!!
+            if you see this tell me please!!
         </div>
     </div>
     
