feat: add functional dropdown button

--- a/src/template.html
+++ b/src/template.html
@@ -25,7 +25,7 @@
     </header>
     
     <aside>
-        <h1>Lifese</h1>
+        <h1 id="asideTitle">Lifese</h1>
 
         <ul class="sidebar-buttons-container">
             <li class="sidebar-button active" id="allQuestsBtn" data-type="quests">
