feat: WIP implement point spending UI

--- a/src/template.html
+++ b/src/template.html
@@ -19,7 +19,6 @@
                 <li><button class="action-button" id="taskBtn" data-type="tasks">New Task</button></li>
                 <li><button class="action-button" id="missionBtn" data-type="missions">New Mission</button></li>
                 <li><button class="action-button" id="offenseBtn" data-type="offenses">New Offense</button></li>
-                <!-- <li><button class="action-button" id="spendBtn" data-type="spend">Spend Points</button></li> -->
             </ul>
         </nav>
     </header>
@@ -47,6 +46,10 @@
             <li class="sidebar-button" id="statsBtn" data-type="stats">
                 <i class="fa-solid fa-chart-line"></i>
                 Statistics
+            </li>
+            <li class="sidebar-button" id="spendBtn" data-type="spend">
+                <i class="fa-solid fa-clock"></i>
+                Spend Points
             </li>
         </ul>
     </aside>
